crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/packageWithCompressionAndByteAlignmentErrors.usdz
version https://git-lfs.github.com/spec/v1
oid sha256:97165dd7a07a11c12588e3949c664b29d1c10902b57e4c6d807124223ac0a53f
size 580
